# lab04

./: .travis.yml  README.md  appveyor.yml
.github/workflows/: cicd.yaml
lab04/: CMakeLists.txt  lab03.gitignore
lab04/_build/: CMakeCache.txt  Makefile  cmake_install.cmake
lab04/_build/formatter_ex_lib/: Makefile  cmake_install.cmake
lab04/_build/formatter_lib/: Makefile  cmake_install.cmake
lab04/_build/hello_world/: Makefile  cmake_install.cmake  hello_world
lab04/_build/solver/: Makefile  cmake_install.cmake  solver
lab04/_build/solver_lib/: Makefile  cmake_install.cmake
lab04/formatter_ex_lib/: CMakeLists.txt
lab04/formatter_ex_lib/_build/: CMakeCache.txt  Makefile  cmake_install.cmake
lab04/formatter_lib/: CMakeLists.txt
lab04/formatter_lib/_build/: CMakeCache.txt  Makefile  cmake_install.cmake
lab04/hello_world/: CMakeLists.txt
lab04/hello_world/_build/: CMakeCache.txt  Makefile  cmake_install.cmake  hello_world
lab04/solver/: CMakeLists.txt
lab04/solver/_build/: CMakeCache.txt  Makefile  cmake_install.cmake  solver
lab04/solver_lib/: CMakeLists.txt  solver.cpp
lab04/solver_lib/_build/: CMakeCache.txt  Makefile  cmake_install.cmake
